feat: ショップ固有の設定をまとめて指定できるようにした

--- a/target.example.yml
+++ b/target.example.yml
@@ -1,46 +1,69 @@
-# Amazon の場合
-- name: 山田照明 Zライト 高演色LED 肌色きれい ブラック Z-8N
-  url: https://www.amazon.co.jp/dp/B085G48BZV
-  thumb_url: https://m.media-amazon.com/images/I/51-D0-ubppL._AC_SL1500_.jpg
-  price_xpath: '//span[@class="a-price-whole"]'
+store_list:
+  - name: amazon.co.jp
+    price_xpath: '//span[@class="a-price-whole"]'
+    
+  - name: store.ui.com
+    price_xpath: '//div[contains(@class, "comProduct__price")]/span[1]'
+    price_unit: ドル
+    action:
+      - type: click
+        xpath: '//a[@id="headerLoginLink"]'
+      - type: input
+        xpath: '//input[@name="username"]'
+        value: XXXXXX # ユーザ名
+      - type: input
+        xpath: '//input[@name="password"]'
+        value: XXXXXX # パスワード
+      - type: click
+        xpath: '//button[@type="submit"]'
+      - type: sixdigit
+    unavailable_xpath: '//span[contains(text(), "Sold Out")]'
 
-# ヨドバシの場合
-- name: トラスコ中山 TRUSCO MKT-2015-BK マジックバンド結束テープ 
-  url: https://www.yodobashi.com/product/100000001002033604/
-  thumb_url: https://image.yodobashi.com/product/100/000/001/002/033/604/100000001002033604_10204_004.jpg
-  price_xpath: '//span[@id="js_scl_unitPrice"]'
-  unavailable_xpath: '//p[contains(text(), "販売休止中")]'
 
-# Ubiquiti Store USA の場合
-- name: Connect Display 13
-  url: https://store.ui.com/collections/early-access/products/unifi-connect-display-13-ea
-  thumb_url: https://cdn.shopify.com/s/files/1/1439/1668/products/UC-Display13-W-002_grande.png?v=1660935898
-  price_xpath: '//div[contains(@class, "comProduct__price")]/span[1]'
-  price_unit: ドル
-  action:
-    - type: click
-      xpath: '//a[@id="headerLoginLink"]'
-    - type: input
-      xpath: '//input[@name="username"]'
-      value: XXXXXXXX # ユーザ名
-    - type: input
-      xpath: '//input[@name="password"]'
-      value: XXXXXXXX # パスワード
-    - type: click
-      xpath: '//button[@type="submit"]'
-    - type: sixdigit
-  unavailable_xpath: '//span[contains(text(), "Sold Out")]'
+  - name: lenovo.com/jp
+    preload:
+      url: https://www.lenovo.com/jp/edu/ja/login/jpeducation/?groupId=jpeducation
+      action:
+        - type: input
+          xpath: '//input[@class="input-passcode"]'
+          value: XXXXXX # パスコード
+        - type: captcha
+          xpath: '//div[@class="g-recaptcha"]'
+        - type: click
+          xpath: '//div[@class="login-sign-in-button"]'
+    price_xpath: '//p[@class="present"]'
+
+  - name: yodobashi.com
+    price_xpath: '//span[@id="js_scl_unitPrice"]'
+    unavailable_xpath: '//p[contains(text(), "販売休止中")]'
+        
+item_list:
+  - name: Connect Display 13
+    store: store.ui.com
+    url: https://store.ui.com/collections/early-access/products/unifi-connect-display-13-ea
+    thumb_url: https://cdn.shopify.com/s/files/1/1439/1668/products/UC-Display13-W-002_grande.png?v=1660935898
+
+  - name: ThinkPad X1 Carbon
+    store: lenovo.com/jp
+    url: https://www.lenovo.com/jp/edu/ja/configurator/cto/index.html?mainCode=21CBCTO1WWJP1&groupId=jpeducation
+    thumb_url: https://p2-ofp.static.pub/ShareResource/JPResource/JP-Images/products/thinkpad-x1-carbon-gen10/thinkpad-x1-carbon-gen10-hero-725x515.png
+
+  - name: Fractal Design North Charcoal Black TG Dark
+    store: amazon.co.jp
+    url: https://www.amazon.co.jp/dp/B0BPBXPCT5
+    thumb_url: https://m.media-amazon.com/images/I/71Ju7iX3XfL._AC_SX425_.jpg
+    
+  - name: Fractal Design North Charcoal Black TG Dark (ヨドバシ)
+    store: yodobashi.com
+    url: https://www.yodobashi.com/product/100000001007535004/
+    thumb_url: https://m.media-amazon.com/images/I/71Ju7iX3XfL._AC_SX425_.jpg
   
-# Lenovo の学生ストアの場合
-- name: ThinkPad X1 Carbon
-  action:
-    - type: input
-      xpath: '//input[@class="input-passcode"]'
-      value: xxxxxxxxx
-    - type: captcha
-      xpath: '//div[@class="g-recaptcha"]'
-    - type: click
-      xpath: '//div[@class="login-sign-in-button"]'
-  url: https://www.lenovo.com/jp/edu/ja/configurator/cto/index.html?mainCode=21CBCTO1WWJP1&groupId=jpeducation
-  thumb_url: https://p2-ofp.static.pub/ShareResource/JPResource/JP-Images/products/thinkpad-x1-carbon-gen10/thinkpad-x1-carbon-gen10-hero-725x515.png
-  price_xpath: '//p[@class="present"]'
+  - name: 山田照明 Zライト 高演色LED 肌色きれい ブラック Z-8N
+    store: amazon.co.jp
+    url: https://www.amazon.co.jp/dp/B085G48BZV
+    thumb_url: https://m.media-amazon.com/images/I/51-D0-ubppL._AC_SL1500_.jpg
+
+  - name: トラスコ中山 TRUSCO MKT-2015-BK マジックバンド結束テープ
+    store: yodobashi.com
+    url: https://www.yodobashi.com/product/100000001002033604/
+    thumb_url: https://image.yodobashi.com/product/100/000/001/002/033/604/100000001002033604_10204_004.jpg
