--- a/target.example.yml
+++ b/target.example.yml
@@ -1,6 +1,14 @@
 store_list:
   - name: amazon.co.jp
     price_xpath: '//span[@class="a-price-whole"]'
+
+  - name: yodobashi.com
+    price_xpath: '//span[@id="js_scl_unitPrice"]'
+    unavailable_xpath: '//p[contains(text(), "販売休止中")]'
+
+  - name: shopping.yahoo.co.jp
+    price_xpath: '//span[@class="elPriceNumber"]'
+    unavailable_xpath: '//button[contains(@class, "isDisabled")]/span[contains(text(), "在庫がありません")]'
     
   - name: store.ui.com
     price_xpath: '//div[contains(@class, "comProduct__price")]/span[1]'
@@ -31,10 +39,6 @@ store_list:
         - type: click
           xpath: '//div[@class="login-sign-in-button"]'
     price_xpath: '//p[@class="present"]'
-
-  - name: yodobashi.com
-    price_xpath: '//span[@id="js_scl_unitPrice"]'
-    unavailable_xpath: '//p[contains(text(), "販売休止中")]'
         
 item_list:
   - name: Connect Display 13
@@ -42,6 +46,11 @@ item_list:
     url: https://store.ui.com/collections/early-access/products/unifi-connect-display-13-ea
     thumb_url: https://cdn.shopify.com/s/files/1/1439/1668/products/UC-Display13-W-002_grande.png?v=1660935898
 
+  - name: BOOX Mira Pro
+    store: shopping.yahoo.co.jp
+    url: https://store.shopping.yahoo.co.jp/skt/boox-mirapro.html
+    thumb_url: https://item-shopping.c.yimg.jp/i/n/skt_boox-mirapro
+    
   - name: ThinkPad X1 Carbon
     store: lenovo.com/jp
     url: https://www.lenovo.com/jp/edu/ja/configurator/cto/index.html?mainCode=21CBCTO1WWJP1&groupId=jpeducation
