feat: 価格取得エラーが続いた場合に，Slack に通知するようにした

--- a/config.example.yml
+++ b/config.example.yml
@@ -2,6 +2,7 @@ interval: 1800 # 監視周期
 
 slack:
   channel: "#price" # Bot が投稿するチャンネル
+  error_channel: "#error" # エラーが続いた場合に Bot が投稿するチャンネル
   bot_token: xoxb-123456789012-1234567890123-XXXXXXXXXXXXXXXXXXXXXXXX # Bot のトークン
 
 liveness:
