feat: Amazon の価格は PA-API で取得するようにし，サムネイル画像をなるべく自動で取得するようにした

--- a/config.example.yml
+++ b/config.example.yml
@@ -5,6 +5,12 @@ slack:
   error_channel: "#error" # エラーが続いた場合に Bot が投稿するチャンネル
   bot_token: xoxb-123456789012-1234567890123-XXXXXXXXXXXXXXXXXXXXXXXX # Bot のトークン
 
+# PA-API で価格を取得するための設定
+amazon:
+  associate: XXXXXX-22
+  access_key: XXXXXXXXXXXXXXXXXXXX
+  secret_key: XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+  
 liveness:
   file: /dev/shm/healthz
   interval: 300
